# COMP3009-Final-Project-PUBLIC

./: CMakeLists.txt  Makefile  README.md  _RUN_PROJECT.bat
headers/: baseobject.h  camera.h  constants.h  polyobject.h  utils.h
shaders/: depth.frag  depth.vert  particle.frag  particle.geom  particle.vert  phongTex.frag  phongTex.vert  phongTexShadow.frag  phongTexShadow.vert  unlitTex.frag  unlitTex.vert
src/: baseobject.cpp  camera.cpp  main.cpp  polyobject.cpp  utils.cpp
textures/: checkerboard_blue.tga  checkerboard_green.tga  checkerboard_red.tga  container.tga  court.tga
